--- a/src/main/resources/templates/user/parents/createAccountForm.html
+++ b/src/main/resources/templates/user/parents/createAccountForm.html
@@ -4,6 +4,8 @@
     <title th:replace="~{/include/title.html::title}">
 
     </title>
+
+    <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/parents/createAccountFormJs.html::js}" type="text/javascript"></script>
 
@@ -19,59 +21,59 @@
 </nav>
 
 <section>
-    <div id = "sectionWrap">
+    <div id="sectionWrap">
         <div class="word">
             회 원 가 입
         </div>
-        <div class = "createAccountForm">
-            <form th:action = "@{/user/parents/createAccountConfirm}" method="post" name = "createAccountForm">
-                <input type = "text" name = "id" placeholder="아이디">
-                <input type = "button" id = "checkDuplication" value = "아이디 중복 체크"><br>
+        <div class="createAccountForm">
+            <form th:action="@{/user/parents/createAccountConfirm}" method="post" name="createAccountForm">
+                <input type="text" name="id" placeholder="아이디">
+                <input type="button" id="checkDuplication" value="아이디 중복 체크"><br>
                 <p id="duplicationResult"></p>
-                <input type = "password" name = "password" placeholder="비밀번호"><br>
-                <input type = "password" name = "password_again" placeholder="비밀번호 확인"><br>
-                <input type = "text" name = "name" placeholder="이름"><br>
+                <input type="password" name="password" placeholder="비밀번호"><br>
+                <input type="password" name="password_again" placeholder="비밀번호 확인"><br>
+                <input type="text" name="name" placeholder="이름"><br>
                 핸드폰&nbsp;
-                <input type = "hidden" name = "phone">
-                <select name = "phone1">
+                <input type="hidden" name="phone">
+                <select name="phone1">
                     <option value="">---선택해주세요---</option>
                     <option value="010">010</option>
                     <option value="011">011</option>
                     <option value="016">016</option>
                     <option value="019">019</option>
                 </select>&nbsp;- &nbsp;
-                <input type= "text" name = "phone2" oninput="filterKey();"> &nbsp;- &nbsp;
-                <input type = "text" name = "phone3" oninput="filterKey();"><br>
+                <input type="text" name="phone2" oninput="filterKey();"> &nbsp;- &nbsp;
+                <input type="text" name="phone3" oninput="filterKey();"><br>
                 메일&nbsp;
-                <input type = "hidden" name = "mail">
-                <input type = "text" name = "mail1" placeholder="메일"> @
+                <input type="hidden" name="mail">
+                <input type="text" name="mail1" placeholder="메일"> @
                 <select name="mail2">
                     <option value="">---선택해주세요---</option>
                     <option value="gmail.com">gmail.com</option>
                     <option value="naver.com">naver.com</option>
                     <option value="daum.net">daum.net</option>
                 </select><br>
-                우편번호<input type="text" readonly id="postcode" name = "zip_code" placeholder="우편번호">
+                우편번호<input type="text" readonly id="postcode" name="zip_code" placeholder="우편번호">
                 <input type="button" onclick="getPostcode()" value="우편번호 찾기"><br>
                 주소<input type="text" id="address" name="address" placeholder="주소"><br>
                 <input type="text" id="detailAddress" name="address_detail1" placeholder="상세주소를 입력하세요."><br>
                 <input type="text" id="extraAddress" name="address_detail2" placeholder="참고항목"><br>
                 학교 이름
-                <input type="text" name = "school_search" placeholder="학교 검색"> &nbsp;
+                <input type="text" name="school_search" placeholder="학교 검색"> &nbsp;
                 <input type="button" value="검색"><br>
-                <select name = "school_no">
+                <select name="school_no">
                     <option value="">---선택해주세요----</option>
                 </select>
                 <input type="hidden" name="school_name"><br>
                 학년 &nbsp;
-                <select name = "grade">
+                <select name="grade">
                     <option value="">---선택해주세요----</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                 </select><br>
                 반 &nbsp;
-                <select name = "class_no">
+                <select name="class_no">
                     <option value="">---선택해주세요----</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
@@ -85,11 +87,11 @@
                     <option value="10">10</option>
                 </select><br>
                 학생 이름
-                <select name = "student_no">
+                <select name="student_no">
                     <option value="">---선택해주세요----</option>
                 </select><br>
                 학생과의 관계
-                <select name = "relation">
+                <select name="relation">
                     <option value="">---선택해주세요----</option>
                     <option value="1">부</option>
                     <option value="2">모</option>
@@ -99,8 +101,8 @@
                     <option value="6">외조모</option>
                     <option value="7">기타</option>
                 </select><br>
-                <input type = "button" value="register" onclick="createAccountConfirm();">
-                <input type = "reset" value="reset">
+                <input type="button" value="register" onclick="createAccountConfirm();">
+                <input type="reset" value="reset">
             </form>
 
         </div>
