--- a/src/main/resources/templates/user/student/modifyAccountForm.html
+++ b/src/main/resources/templates/user/student/modifyAccountForm.html
@@ -22,20 +22,20 @@
 </nav>
 
 <section>
-    <div id = "sectionWrap">
+    <div id="sectionWrap">
         <div class="word">
             회 원 수 정
         </div>
-        <div class = "modifyAccountForm">
-            <form th:action = "@{/user/student/modifyAccountConfirm}" method="post" name = "modifyAccountForm">
-                <input type = "hidden" name = "no" th:value="${loginedStudentDto.no}">
-                <input type = "text" name = "id" th:value="${loginedStudentDto.id}" readonly disabled><br>
-                <input type = "password" name = "password" value="*****" readonly disabled>&nbsp;
-                <input type = "button" id = "updatePassword" value = "비밀번호 수정" th:data-no = "${loginedStudentDto.no}"> <br>
-                <input type = "text" name = "name" placeholder="이름" th:value="${loginedStudentDto.name}"><br>
+        <div class="modifyAccountForm">
+            <form th:action="@{/user/student/modifyAccountConfirm}" method="post" name="modifyAccountForm">
+                <input type="hidden" name="no" th:value="${loginedStudentDto.no}">
+                <input type="text" name="id" th:value="${loginedStudentDto.id}" readonly disabled><br>
+                <input type="password" name="password" value="*****" readonly disabled>&nbsp;
+                <input type="button" id="updatePassword" value="비밀번호 수정" th:data-no="${loginedStudentDto.no}"> <br>
+                <input type="text" name="name" placeholder="이름" th:value="${loginedStudentDto.name}" readonly disabled><br>
                 핸드폰&nbsp;
-                <input type = "hidden" name = "phone">
-                <select id="phone1" name = "phone1">
+                <input type="hidden" name="phone">
+                <select id="phone1" name="phone1">
                     <option value="">---선택해주세요---</option>
                     <option value="010">010</option>
                     <option value="011">011</option>
@@ -43,53 +43,43 @@
                     <option value="016">017</option>
                     <option value="019">019</option>
                 </select>&nbsp;- &nbsp;
-                <input type= "text" name = "phone2" oninput="filterKey();"> &nbsp;- &nbsp;
-                <input type = "text" name = "phone3" oninput="filterKey();"><br>
+                <input type="text" name="phone2" oninput="filterKey();"> &nbsp;- &nbsp;
+                <input type="text" name="phone3" oninput="filterKey();"><br>
                 메일&nbsp;
-                <input type = "hidden" name = "mail">
-                <input type = "text" name = "mail1" placeholder="메일"> @
+                <input type="hidden" name="mail">
+                <input type="text" name="mail1" placeholder="메일"> @
                 <select name="mail2">
                     <option value="">---선택해주세요---</option>
                     <option value="gmail.com">gmail.com</option>
                     <option value="naver.com">naver.com</option>
                     <option value="daum.net">daum.net</option>
                 </select><br>
-                주소 &nbsp;
-                <input type = "text" name = "address" placeholder="주소 입력하세요" th:value="${loginedStudentDto.address}"><br>
+                우편번호<input type="text" readonly id="postcode" name="zip_code" th:value="${loginedStudentDto.zip_code}" placeholder="우편번호">
+                <input type="button" onclick="getPostcode()" value="우편번호 찾기"><br>
+                주소
+                <input type="text" id="address" name="address" th:value="${loginedStudentDto.address}" placeholder="주소"><br>
+                <input type="text" id="detailAddress" name="address_detail1"
+                       th:value="${loginedStudentDto.address_detail1}" placeholder="상세주소를 입력하세요."><br>
+                <input type="text" id="extraAddress" name="address_detail2"
+                       th:value="${loginedStudentDto.address_detail2}" placeholder="참고항목"><br>
                 학교 이름 &nbsp;
-                <select name = "school_name">
-                    <option value="">---선택해주세요----</option>
-                    <option value="덕문여자고등학교" th:selected="${loginedStudentDto.school_name == '덕문여자고등학교'}">덕문여자고등학교</option>
-                    <option value="창원남고등학교" th:selected="${loginedStudentDto.school_name == '창원남고등학교'}">창원남고등학교</option>
-                    <option value="대암고등학교" th:selected="${loginedStudentDto.school_name == '대암고등학교'}">대암고등학교</option>
-                </select><br>
+                <input type="text" name="school_name" th:value="${loginedStudentDto.school_name}" readonly disabled><br>
                 성별 &nbsp;
-                <select name = "gender">
+                <select name="gender">
                     <option value="">---선택해주세요----</option>
                     <option value="1" th:selected="${loginedStudentDto.gender == 1}">남자</option>
                     <option value="0" th:selected="${loginedStudentDto.gender == 0}">여자</option>
                 </select><br>
                 학년 &nbsp;
-                <select name = "grade">
-                    <option value="">---선택해주세요----</option>
-                    <option value="1" th:selected="${loginedStudentDto.gender == 1}">1</option>
-                    <option value="2" th:selected="${loginedStudentDto.gender == 2}">2</option>
-                    <option value="3" th:selected="${loginedStudentDto.gender == 3}">3</option>
-                </select><br>
+                <input type="text" name="grade" th:value="${loginedStudentDto.grade}" readonly disabled><br>
                 반 &nbsp;
-                <select name = "class_no">
-                    <option value="">---선택해주세요----</option>
-                    <option value="1" th:selected="${loginedStudentDto.gender == 1}">1</option>
-                    <option value="2" th:selected="${loginedStudentDto.gender == 2}">2</option>
-                    <option value="3" th:selected="${loginedStudentDto.gender == 3}">3</option>
-                    <option value="4" th:selected="${loginedStudentDto.gender == 4}">4</option>
-                </select><br>
+                <input type="text" name="class_no" th:value="${loginedStudentDto.class_no}" readonly disabled><br>
                 번호 &nbsp;
-                <input type="text" name="eigen_no" oninput="filterKey();" th:value="${loginedStudentDto.eigen_no}"><br>
-                <input type = "button" value="modify" onclick="modifyAccountConfirm();">
-                <input type = "reset" value="reset">
+                <input type="text" name="eigen_no" th:value="${loginedStudentDto.eigen_no}" readonly disabled><br>
+                <input type="button" value="회원 수정" onclick="modifyAccountConfirm();">
+                <input type="reset" value="reset">
                 <br>
-                <input class= "delete" type = "button" value="delete" th:data-no="${loginedStudentDto.no}">
+                <input class="delete" type="button" value="delete" th:data-no="${loginedStudentDto.no}">
             </form>
 
         </div>
@@ -97,6 +87,10 @@
 </section>
 
 <footer th:replace="~{/include/headerNavFooter.html::footer}">
+
+
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script th:src="@{/js/postCodeApi.js}" type="text/javascript"></script>
 
 </footer>
 
