--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -32,7 +32,7 @@ body {
 .notice-container,
 .eng-word-container {
     margin: 10px 10px;
-    padding: auto;
+    /*padding: auto;*/
     min-width: 370px;
     max-width: 370px;
     min-height: 250px;
@@ -46,7 +46,7 @@ body {
 .timetable-container,
 .menu-container {
     margin: 10px 10px;
-    padding: auto;
+    /*padding: auto;*/
     min-width: 530px;
     max-width: 530px;
     min-height: 250px;
@@ -59,7 +59,7 @@ body {
 
 .ad-container {
     margin: 10px 10px;
-    padding: auto;
+    /*padding: auto;*/
     min-width: 920px;
     max-width: 920px;
     min-height: 130px;
